Projeto_Final/src/.antlr/ADVParser.java
// Generated from /home/rafael/Documentos/Uni-Cadeiras/2-ano/2-semestre/C/c2023-adv-01/src/ADV.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ADVParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, SINGLE=55, BLOCK=56, PROPERTY_NAME=57, AUTOMATON_TYPE=58, 
		TYPE=59, SYMBOL=60, BOOLEAN=61, DOUBLE=62, INT=63, ID=64, WS=65;
	public static final int
		RULE_program = 0, RULE_section = 1, RULE_alphabet = 2, RULE_automaton = 3, 
		RULE_state = 4, RULE_play = 5, RULE_state_def = 6, RULE_transition = 7, 
		RULE_transition_def = 8, RULE_view = 9, RULE_view_content = 10, RULE_grid = 11, 
		RULE_grid_opt = 12, RULE_place = 13, RULE_construct_line = 14, RULE_view_state = 15, 
		RULE_point = 16, RULE_declare_point = 17, RULE_initID = 18, RULE_expr = 19, 
		RULE_animation = 20, RULE_animation_content = 21, RULE_animation_def = 22, 
		RULE_action = 23, RULE_action_part = 24, RULE_align_type = 25, RULE_for_cycle = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "section", "alphabet", "automaton", "state", "play", "state_def", 
			"transition", "transition_def", "view", "view_content", "grid", "grid_opt", 
			"place", "construct_line", "view_state", "point", "declare_point", "initID", 
			"expr", "animation", "animation_content", "animation_def", "action", 
			"action_part", "align_type", "for_cycle"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'alphabet'", "'{'", "','", "'}'", "'<<<'", "';'", "'>>>'", "'state'", 
			"'play'", "'['", "'='", "']'", "'transition'", "'->'", "'view'", "'of'", 
			"'place'", "'grid'", "'('", "')'", "'step'", "'margin'", "'color'", "'line'", 
			"'<'", "'>'", "'#label'", "'align'", "'at'", "'as'", "'--'", "':'", "'point'", 
			"'/'", "'*'", "'+'", "'-'", "'animation'", "'viewport'", "'for'", "'++'", 
			"'on'", "'pause'", "'show'", "'below'", "'above'", "'left'", "'right'", 
			"'center'", "'top'", "'bottom'", "'in'", "'{{'", "'}}'", null, null, 
			null, "'complete'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "SINGLE", "BLOCK", "PROPERTY_NAME", 
			"AUTOMATON_TYPE", "TYPE", "SYMBOL", "BOOLEAN", "DOUBLE", "INT", "ID", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ADV.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ADVParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ADVParser.EOF, 0); }
		public AlphabetContext alphabet() {
			return getRuleContext(AlphabetContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(54);
			alphabet();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__14) | (1L << T__37) | (1L << AUTOMATON_TYPE) | (1L << TYPE))) != 0)) {
				{
				{
				setState(55);
				section();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public AutomatonContext automaton() {
			return getRuleContext(AutomatonContext.class,0);
		}
		public ViewContext view() {
			return getRuleContext(ViewContext.class,0);
		}
		public AnimationContext animation() {
			return getRuleContext(AnimationContext.class,0);
		}
		public PlayContext play() {
			return getRuleContext(PlayContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AUTOMATON_TYPE:
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				automaton();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				view();
				}
				break;
			case T__37:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				animation();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				play();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlphabetContext extends ParserRuleContext {
		public List<TerminalNode> SYMBOL() { return getTokens(ADVParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(ADVParser.SYMBOL, i);
		}
		public AlphabetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alphabet; }
	}

	public final AlphabetContext alphabet() throws RecognitionException {
		AlphabetContext _localctx = new AlphabetContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alphabet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__0);
			setState(70);
			match(T__1);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SYMBOL) {
				{
				setState(71);
				match(SYMBOL);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(72);
					match(T__2);
					setState(73);
					match(SYMBOL);
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(81);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AutomatonContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(ADVParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(ADVParser.ID, 0); }
		public TransitionContext transition() {
			return getRuleContext(TransitionContext.class,0);
		}
		public TerminalNode AUTOMATON_TYPE() { return getToken(ADVParser.AUTOMATON_TYPE, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<For_cycleContext> for_cycle() {
			return getRuleContexts(For_cycleContext.class);
		}
		public For_cycleContext for_cycle(int i) {
			return getRuleContext(For_cycleContext.class,i);
		}
		public List<State_defContext> state_def() {
			return getRuleContexts(State_defContext.class);
		}
		public State_defContext state_def(int i) {
			return getRuleContext(State_defContext.class,i);
		}
		public AutomatonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_automaton; }
	}

	public final AutomatonContext automaton() throws RecognitionException {
		AutomatonContext _localctx = new AutomatonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_automaton);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AUTOMATON_TYPE) {
				{
				setState(83);
				match(AUTOMATON_TYPE);
				}
			}

			setState(86);
			match(TYPE);
			setState(87);
			match(ID);
			setState(88);
			match(T__4);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(89);
				state();
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__39 || _la==ID) {
				{
				setState(99);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					{
					setState(95);
					state_def();
					setState(96);
					match(T__5);
					}
					}
					break;
				case T__39:
					{
					setState(98);
					for_cycle();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			transition();
			setState(105);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ADVParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ADVParser.ID, i);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__7);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(108);
				match(ID);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(109);
					match(T__2);
					setState(110);
					match(ID);
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(118);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ADVParser.ID, 0); }
		public PlayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_play; }
	}

	public final PlayContext play() throws RecognitionException {
		PlayContext _localctx = new PlayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_play);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__8);
			setState(121);
			match(ID);
			setState(122);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ADVParser.ID, 0); }
		public List<TerminalNode> PROPERTY_NAME() { return getTokens(ADVParser.PROPERTY_NAME); }
		public TerminalNode PROPERTY_NAME(int i) {
			return getToken(ADVParser.PROPERTY_NAME, i);
		}
		public List<TerminalNode> BOOLEAN() { return getTokens(ADVParser.BOOLEAN); }
		public TerminalNode BOOLEAN(int i) {
			return getToken(ADVParser.BOOLEAN, i);
		}
		public State_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_def; }
	}

	public final State_defContext state_def() throws RecognitionException {
		State_defContext _localctx = new State_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_state_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(125);
			match(T__9);
			setState(126);
			match(PROPERTY_NAME);
			setState(127);
			match(T__10);
			setState(128);
			match(BOOLEAN);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(129);
				match(T__2);
				setState(130);
				match(PROPERTY_NAME);
				setState(131);
				match(T__10);
				setState(132);
				match(BOOLEAN);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransitionContext extends ParserRuleContext {
		public List<Transition_defContext> transition_def() {
			return getRuleContexts(Transition_defContext.class);
		}
		public Transition_defContext transition_def(int i) {
			return getRuleContext(Transition_defContext.class,i);
		}
		public TransitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition; }
	}

	public final TransitionContext transition() throws RecognitionException {
		TransitionContext _localctx = new TransitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_transition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__12);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(141);
				transition_def();
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(142);
					match(T__2);
					}
				}

				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Transition_defContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ADVParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ADVParser.ID, i);
		}
		public List<TerminalNode> SYMBOL() { return getTokens(ADVParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(ADVParser.SYMBOL, i);
		}
		public Transition_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition_def; }
	}

	public final Transition_defContext transition_def() throws RecognitionException {
		Transition_defContext _localctx = new Transition_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_transition_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ID);
			setState(153);
			match(T__13);
			setState(154);
			match(SYMBOL);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(155);
				match(T__2);
				setState(156);
				match(SYMBOL);
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(T__13);
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(163);
				match(ID);
				}
				break;
			case T__1:
				{
				setState(164);
				match(T__1);
				setState(165);
				match(ID);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(166);
					match(T__2);
					setState(167);
					match(ID);
					}
					}
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(173);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ADVParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ADVParser.ID, i);
		}
		public List<View_contentContext> view_content() {
			return getRuleContexts(View_contentContext.class);
		}
		public View_contentContext view_content(int i) {
			return getRuleContext(View_contentContext.class,i);
		}
		public ViewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_view; }
	}

	public final ViewContext view() throws RecognitionException {
		ViewContext _localctx = new ViewContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_view);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__14);
			setState(177);
			match(ID);
			setState(178);
			match(T__15);
			setState(179);
			match(ID);
			setState(180);
			match(T__4);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 6)) & ~0x3f) == 0 && ((1L << (_la - 6)) & ((1L << (T__5 - 6)) | (1L << (T__16 - 6)) | (1L << (T__17 - 6)) | (1L << (T__24 - 6)) | (1L << (T__32 - 6)) | (1L << (ID - 6)))) != 0)) {
				{
				{
				setState(181);
				view_content();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(187);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class View_contentContext extends ParserRuleContext {
		public List<View_stateContext> view_state() {
			return getRuleContexts(View_stateContext.class);
		}
		public View_stateContext view_state(int i) {
			return getRuleContext(View_stateContext.class,i);
		}
		public Declare_pointContext declare_point() {
			return getRuleContext(Declare_pointContext.class,0);
		}
		public List<Construct_lineContext> construct_line() {
			return getRuleContexts(Construct_lineContext.class);
		}
		public Construct_lineContext construct_line(int i) {
			return getRuleContext(Construct_lineContext.class,i);
		}
		public List<PlaceContext> place() {
			return getRuleContexts(PlaceContext.class);
		}
		public PlaceContext place(int i) {
			return getRuleContext(PlaceContext.class,i);
		}
		public List<GridContext> grid() {
			return getRuleContexts(GridContext.class);
		}
		public GridContext grid(int i) {
			return getRuleContext(GridContext.class,i);
		}
		public View_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_view_content; }
	}

	public final View_contentContext view_content() throws RecognitionException {
		View_contentContext _localctx = new View_contentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_view_content);
		int _la;
		try {
			setState(221);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(189);
				match(T__16);
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(190);
					view_state();
					}
					}
					setState(195);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				setState(196);
				match(T__5);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(197);
				declare_point();
				setState(198);
				match(T__5);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__24) {
					{
					{
					setState(200);
					construct_line();
					}
					}
					setState(205);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(206);
				match(T__5);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__16 || _la==T__24) {
					{
					{
					setState(207);
					place();
					}
					}
					setState(212);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(213);
				match(T__5);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(217);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(214);
					grid();
					}
					}
					setState(219);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(220);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GridContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ADVParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ADVParser.ID, i);
		}
		public List<TerminalNode> DOUBLE() { return getTokens(ADVParser.DOUBLE); }
		public TerminalNode DOUBLE(int i) {
			return getToken(ADVParser.DOUBLE, i);
		}
		public List<Grid_optContext> grid_opt() {
			return getRuleContexts(Grid_optContext.class);
		}
		public Grid_optContext grid_opt(int i) {
			return getRuleContext(Grid_optContext.class,i);
		}
		public GridContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grid; }
	}

	public final GridContext grid() throws RecognitionException {
		GridContext _localctx = new GridContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_grid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(T__17);
			setState(224);
			match(ID);
			setState(225);
			match(T__18);
			setState(226);
			match(DOUBLE);
			setState(227);
			match(T__2);
			setState(228);
			match(DOUBLE);
			setState(229);
			match(T__19);
			setState(230);
			match(T__9);
			setState(231);
			grid_opt();
			setState(232);
			match(T__10);
			setState(233);
			_la = _input.LA(1);
			if ( !(_la==DOUBLE || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(241);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(234);
				match(T__2);
				setState(235);
				grid_opt();
				setState(236);
				match(T__10);
				setState(237);
				_la = _input.LA(1);
				if ( !(_la==DOUBLE || _la==ID) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(243);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(244);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Grid_optContext extends ParserRuleContext {
		public Grid_optContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grid_opt; }
	}

	public final Grid_optContext grid_opt() throws RecognitionException {
		Grid_optContext _localctx = new Grid_optContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_grid_opt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(246);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlaceContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ADVParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ADVParser.ID, i);
		}
		public List<Align_typeContext> align_type() {
			return getRuleContexts(Align_typeContext.class);
		}
		public Align_typeContext align_type(int i) {
			return getRuleContext(Align_typeContext.class,i);
		}
		public PlaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_place; }
	}

	public final PlaceContext place() throws RecognitionException {
		PlaceContext _localctx = new PlaceContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_place);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(249);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(248);
				match(T__16);
				}
			}

			setState(251);
			match(T__24);
			setState(252);
			match(ID);
			setState(253);
			match(T__2);
			setState(254);
			match(ID);
			setState(255);
			match(T__25);
			setState(256);
			match(T__26);
			setState(257);
			match(T__9);
			setState(258);
			match(T__27);
			setState(259);
			match(T__10);
			setState(263);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50))) != 0)) {
				{
				{
				setState(260);
				align_type();
				}
				}
				setState(265);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(266);
			match(T__11);
			setState(269);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__28) {
				{
				setState(267);
				match(T__28);
				setState(268);
				match(ID);
				}
			}
